<resources>
    <string name="pp_copyright">Circle Orboros, Cygnar, Khador, Legion of Everblight, Mercenaries, Minions, Protectorate of Menoth, Retribution of Scyrah, Skorne, Trollbloods and their logos are trademarks of Privateer Press, Inc. Trademarks used without permission. This application is unofficial and is not endorsed by Privateer Press.</string>
    <string name="abomination">Abomination</string>
    <string name="advance_deployment">Advance Deployment</string>
    <string name="arc_node">Arc Node</string>
    <string name="cra">Combined Ranged Attack</string>
    <string name="cma">Combined Melee Attack</string>
    <string name="commander">Commander</string>
    <string name="construct">Construct</string>
    <string name="eyeless">Eyeless Sight</string>
    <string name="fearless">Fearless</string>
    <string name="gunfighter">Gunfighter</string>
    <string name="incorporeal">Incorporeal</string>
    <string name="jack_marshal">\'Jack Marshal</string>
    <string name="officer">Officer</string>
    <string name="pathfinder">Pathfinder</string>
    <string name="standard_bearer">Standard Bearer</string>
    <string name="stealth">Stealth</string>
    <string name="terror">Terror</string>
    <string name="tough">Tough</string>
    <string name="undead">Undead</string>
    <string name="immunity_fire">Immunity : Fire</string>
    <string name="immunity_corrosion">Immunity : Corrosion</string>
    <string name="immunity_electricity">Immunity : Electricity</string>
    <string name="immunity_frost">Immunity : Cold</string>
    <string name="no_weapon">No weapon</string>
    <string name="magical">Magical weapon</string>
    <string name="reach">Reach</string>
    <string name="open_fist">Open Fist</string>
    <string name="chain_weapon">Chain Weapon</string>
    <string name="shield">Shield (+2ARM)</string>
    <string name="buckler">Buckler (+1ARM)</string>
    <string name="fire">Fire Damage</string>
    <string name="continuous_fire">Continuous Fire</string>
    <string name="corrosion">Corrosion</string>
    <string name="continuous_corrosion">Continuous Corrosion</string>
    <string name="weapon_master">Weapon Master</string>
    <string name="critical_fire">Critical Fire</string>
    <string name="critical_corrosion">Critical Corrosion</string>
    <string name="frost">Cold Damage</string>
    <string name="electricity">Electricity Damage</string>
    <string name="hello">Hello</string>
    <string name="app_name">WH army creator</string>
    <string name="app_description">An army building utility for Warmachine/Hordes</string>
    <string name="build_army">New army</string>
    <string name="load_army">Load army</string>
    <string name="card_library">Cards</string>
    <string name="preferences">Preferences</string>
    <string name="launch_battle">Battle</string>
    <string name="import_data">Import data files</string>
    <string name="battle_results">Battle results</string>
    <string name="my_collection">My collection</string>
    <string name="version">Version</string>
    <string name="donate">Donate</string>
    <string name="empty" translatable="false">_</string>
    <string name="small_donation">Small donation</string>
    <string name="medium_donation">Medium donation</string>
    <string name="big_donation">Big donation</string>
    <string name="donation_notice">Donation is up to you. This app is provided free, so you can give some money with no reward : you don\'t buy anything with this money, except the developer\'s gratitude. The donation does not allow any new feature or hide adverts, as everything in this app is free, and there is no ads. Donation is a reward to the developer, who spent a lot of time coding this application ; if you feel generous, be sure your money will be well spent (chocolate, warmachines miniatures, …)!</string>
    <string name="in_app_billing_failure">Failed to contact Google Play billing services</string>
    <string name="in_app_billing_not_available">Google Play billing service not available</string>
    <string name="thank_you">Donation successful, thank you for your support!</string>
    <string name="like_whac">Like WHAC?</string>
    <string name="would_donate">Have you considered making a donation?</string>
    <string name="yes_donate">Shut up and take my money</string>
    <string name="no_thanks">No, remind me later</string>
    <string name="import_files">Import files…</string>
    <string name="files_imported">Files already imported</string>
    <string name="choose_faction">Choose faction</string>
    <string name="choose_tier">Choose tier</string>
    <string name="choose_contract">Choose contract</string>
    <string name="choose_warcaster">Choose warcaster</string>
    <string name="choose_player2">Choose 2nd player army list</string>
    <string name="field_promotion">Field promotion</string>
    <string name="faction_icon">faction icon</string>
    <string name="title">Example title</string>
    <string name="description">Example description</string>
    <string name="carac_spd">SPD</string>
    <string name="carac_str">STR</string>
    <string name="carac_mat">MAT</string>
    <string name="carac_rat">RAT</string>
    <string name="carac_def">DEF</string>
    <string name="carac_arm">ARM</string>
    <string name="carac_foc">FOC</string>
    <string name="carac_cmd">CMD</string>
    <string name="carac_pow">POW</string>
    <string name="carac_p_plus_s">P+S</string>
    <string name="carac_range">RNG</string>
    <string name="carac_rof">ROF</string>
    <string name="carac_aoe">AOE</string>
    <string name="feat">FEAT</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur. Donec ut libero sed arcu vehicula ultricies a non tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut gravida lorem. Ut turpis felis, pulvinar a semper sed, adipiscing id dolor. Pellentesque auctor nisi id magna consequat sagittis. Curabitur dapibus enim sit amet elit pharetra tincidunt feugi</string>
    <string name="unit_name">Unit name</string>
    <string name="field_allowance">FA</string>
    <string name="base_cost">base cost</string>
    <string name="full_cost">full cost</string>
    <string name="casters">Casters</string>
    <string name="units">Units</string>
    <string name="solos">Solos</string>
    <string name="battle_engines">Battle engines</string>
    <string name="objective">Objectives</string>
    <string name="example">example</string>
    <string name="selection_choices">Selection choices</string>
    <string name="selected_army">Selected army</string>
    <string name="choose_army">Choose army composition</string>
    <string name="tier">Tier</string>
    <string name="tier_level">Tier level</string>
    <string name="contract_info">Contract information</string>
    <string name="no_entry_to_attach">Sorry, there is actually no model to attach this entry</string>
    <string name="add_unit">Add unit : </string>
    <string name="models">models</string>
    <string name="min">Min. : </string>
    <string name="max">Max. : </string>
    <string name="min_size">Min. size</string>
    <string name="max_size">Max. size</string>
    <string name="exit_create_army">You are about to leave the page</string>
    <string name="exit_create_army_confirm">Your army has not been saved? Changes will be lost. Exit anyway?</string>
    <string name="plus">+</string>
    <string name="moins">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="edit_army">Edit armies</string>
    <string name="delete">Delete</string>
    <string name="import_">Import</string>
    <string name="duplicate">Duplicate</string>
    <string name="rename">Rename</string>
    <string name="ok">OK</string>
    <string name="copy">Copy</string>
    <string name="export">Export</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="more">More</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="save_as">Save as</string>
    <string name="collapse">Collapse</string>
    <string name="choose_filename">Choose filename</string>
    <string name="apply">Apply</string>
    <string name="commit">Commit</string>
    <string name="heal">Heal 1</string>
    <string name="repair">Repair</string>
    <string name="repair_force_field">Repair force field</string>
    <string name="search">Search</string>
    <string name="owned">Owned</string>
    <string name="painted">Painted</string>
    <string name="dice_stat">Dice stats</string>
    <string name="army_selection_settings">Settings</string>
    <string name="sort_win">Sort by win/loss</string>
    <string name="sort_date">Sort by date</string>
    <string name="sort_opponent">Sort by opponent</string>
    <string name="export_file">Export File</string>
    <string name="pref_timer_group">Timer settings</string>
    <string name="pref_use_timer">Use timer by default</string>
    <string name="pref_key_timer_minutes_summary">Default number of minutes on the clock = !replace!</string>
    <string name="pref_key_timer_minutes">Number of minutes per player</string>
    <string name="pref_list_building_group">List building settings</string>
    <string name="pref_list_building_army_size">Army default size</string>
    <string name="pref_list_building_caster_count">Default caster count</string>
    <string name="pref_list_building_army_size_summary">Default size is !replace! points</string>
    <string name="pref_list_building_caster_count_summary">Default caster(s) count is !replace!</string>
    <string name="pref_list_ergonomy">Ergonomy</string>
    <string name="pref_list_view_card_click_summary">Access card via single click</string>
    <string name="pref_list_view_card_fullscreen_summary">Always show card full-screen</string>
    <string name="pref_list_exit_silently_summary">Always exit silently (no confirmation asked)</string>
    <string name="export_list">Export army list</string>
    <string name="export_mail">Send by mail</string>
    <string name="add_2nd_player">Add 2nd player</string>
    <string name="chrono">Chrono config</string>
    <string name="end_battle">End battle</string>
    <string name="battle_bluetooth">Use bluetooth</string>
    <string name="steamroller">Steamroller</string>
    <string name="search_library">Search card library</string>
    <string name="data_connection_warning">Models data will be downloaded from internet depending on the setting above and the existence of a data connection on your device. If no connection available or download disabled, a local cache data will be used.</string>
    <string name="data_langage_description">Data are available in US/English or in French. Choose which version you wish to use.</string>
    <string name="update_data_button">Download data now</string>
    <string name="import_network_pref">If checking WIFI, data will be downloaded only if WIFI is available and will not consume you data plan. If Mobile, data will be downloaded whatever the network you have</string>
    <string name="import_network_pref_title">Network preference</string>
    <string name="import_pref_langage_title">Choose data langage</string>
    <string name="french">French</string>
    <string name="us_english">US_ENGLISH</string>
    <string name="never">Never</string>
    <string name="once_per_week">Once per week</string>
    <string name="always">Always</string>
    <string name="import_pref_frequency_title">Data auto-import frequency</string>
</resources>