<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollv1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:fillViewport="true" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical|fill_vertical"
        android:fillViewport="true" >

        <FrameLayout
            android:id="@+id/centerItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" >

        </FrameLayout>
        
        <Button
            android:id="@+id/button_load_army"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/centerItem"
            android:drawableLeft="@drawable/ic_edit"
            android:onClick="loadArmy"
            android:text="@string/load_army" />
        
        <Button
            android:id="@+id/button_build_army"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/button_load_army"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@id/button_load_army"
            android:layout_toLeftOf="@id/centerItem"
            android:drawableLeft="@drawable/ic_plus"
            android:onClick="startArmy"
            android:text="@string/build_army" />
        


        <Button
            android:id="@+id/button_launch_battle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_load_army"
            android:drawableLeft="@drawable/ic_battle"
            android:drawableRight="@drawable/ic_battle"
            android:minHeight="72dip"
            android:onClick="startBattle"
            android:text="@string/launch_battle" />

        <Button
            android:id="@+id/button_card_library"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/button_launch_battle"
            android:layout_toLeftOf="@id/centerItem"
            android:drawableLeft="@drawable/ic_cards"
            android:onClick="cardLibrary"
            android:text="@string/card_library" />
        
        <Button
            android:id="@+id/button_scenario_library"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_below="@id/button_launch_battle"
            android:layout_toRightOf="@id/centerItem"
            android:drawableLeft="@drawable/ic_steamroller"
            android:onClick="scenarioLibrary"
            android:text="@string/steamroller" />

        <Button
            android:id="@+id/button_preferences"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/button_scenario_library"
            android:drawableLeft="@drawable/ic_customize"
            android:onClick="preferences"
            android:text="@string/preferences" />

        <Button
            android:id="@+id/button_import_files"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" 
            android:layout_below="@+id/button_preferences" 
            android:drawableLeft="@drawable/ic_import"
            android:onClick="importDataFile"
            android:text="@string/import_data" />

        <Button
            android:id="@+id/button_battle_results"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/button_import_files"
            android:drawableLeft="@drawable/victory"
            android:onClick="battleResults"
            android:text="@string/battle_results" />

        <Button
            android:id="@+id/button_collection"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/button_battle_results"
            android:drawableLeft="@drawable/ic_collection"
            android:onClick="collection"
            android:text="@string/my_collection" />

        <Button
            android:id="@+id/button_version"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/button_collection"
            android:layout_toLeftOf="@id/centerItem"
            android:drawableLeft="@drawable/ic_menu_help"
            android:onClick="version"
            android:text="@string/version" />

        <Button
            android:id="@+id/button_donate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_below="@id/button_collection"
            android:layout_toRightOf="@id/centerItem"
            android:drawableLeft="@drawable/ic_donate"
            android:onClick="donate"
            android:text="@string/donate" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/button_donate"
            android:clickable="true"
            android:onClick="activateSecretImport"
            android:text="@string/pp_copyright"
            android:textSize="@dimen/textview_small_height" />

    </RelativeLayout>

</ScrollView>